@@ -2,6 +2,8 @@ next
 ----
   * Zstandard compression algorithm
   * AArch64 52-bit VA
+  * Address translation tuning with addrxlat.default.* and addrxlat.force.*
+    attributes.
 
 0.4.1
 -----
